<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.FaceDetectionResultActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="32dp"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:srcCompat="@drawable/ic_splash_logo"/>

    <!-- DETECTION RESULT-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/tvHeadingStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        android:text="@string/face_detection_result" />

    <!-- DETECTION DESCRIPTION-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        style="@style/tvLightStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPermissionTitle"
        tools:text="@string/permission_message" />

    <!-- OK -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        style="@style/btnStyle"
        android:layout_width="100dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/okay" />

</androidx.appcompat.widget.LinearLayoutCompat>