<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.PermissionActivity">

    <!--LOGO | TITLE | DESCRIPTION | PERMISSION-->


        <!--LOGO-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_height="80dp"
            android:layout_width="80dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_splash_logo"/>

        <!--TITLE-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPermissionTitle"
            style="@style/tvHeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            android:text="@string/permission_title" />

        <!--DESCRIPTION-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPermissionMessage"
            style="@style/tvLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPermissionTitle"
            android:text="@string/permission_message" />

        <!--NOTIFICATION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvPermissionMessage"
            android:layout_margin="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <!--ICON-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_notifications" />

            <!--TITLE & DESCRIPTION-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <!--TITLE-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNotification"
                    style="@style/tvLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/notification" />

                <!--DESCRIPTION-->
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/tvLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_notification_description" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- CAMERA -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/llNotification"
            android:layout_margin="16dp">

            <!--ICON-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_photo_camera" />

            <!--TITLE & DESCRIPTION-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <!--TITLE-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/camera" />

                <!--DESCRIPTION-->
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/tvLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_camera_description" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>






        <!--NEXT-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            style="@style/btnStyle"
            android:layout_width="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>